<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" android:id="@+id/all">


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configure"
                android:gravity="center"
                android:layout_marginBottom="8dp" android:textSize="18sp"/>
        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:nestedScrollingEnabled="false"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent" android:id="@+id/mylocations"/>
        <TextView
                android:text="@string/theme"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView12"/>
        <Switch
                android:text="@string/dark"
                android:switchPadding="25dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/blackbg"/>
        <TextView
                android:text="@string/transparenty"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content" android:id="@+id/textView10"/>
        <SeekBar
                android:layout_width="match_parent"
                android:progress="70"
                android:layout_height="wrap_content" android:id="@+id/seekBar"/>
        <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/procent"/>
        <TextView
                android:text="@string/visibility"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content" android:id="@+id/textView9"/>
        <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                <Switch
                        android:text="@string/tempin"
                        android:switchPadding="20dp"
                        android:checked="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/tempin" android:textSize="12sp"/>

                <Switch
                        android:text="@string/tempout"
                        android:switchPadding="20dp"
                        android:checked="true"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/tempout"/>

                <Switch
                        android:text="@string/insolation"
                        android:switchPadding="20dp"
                        android:checked="true"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/insolation"/>

                <Switch
                        android:text="@string/windspeed"
                        android:switchPadding="20dp"
                        android:checked="true"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/windspeed"/>

                <Switch
                        android:text="@string/airpollution10"
                        android:checked="true"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/airpol10"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:paddingStart="17dp"
                    android:paddingEnd="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                <Switch
                        android:text="@string/humidityin"
                        android:layout_width="match_parent"
                        android:switchPadding="20dp"
                        android:checked="true"
                        android:textSize="12sp"
                        android:layout_height="wrap_content" android:id="@+id/humidityin"/>

                <Switch
                        android:text="@string/humidityout"
                        android:switchPadding="20dp"
                        android:checked="true"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/humidityout"/>

                <Switch
                        android:text="@string/rainfall"
                        android:switchPadding="20dp"
                        android:checked="true"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/rainfall"/>

                <Switch
                        android:text="@string/pressure"
                        android:switchPadding="20dp"
                        android:checked="true"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/pressure"/>

                <Switch
                        android:text="@string/airpollution25"
                        android:checked="true"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/airpol25"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/wallpaper"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="340dp" android:id="@+id/preview"/>
        <Button
                android:text="@string/add_widget"
                android:layout_marginTop="15dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/addwidget"
                style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>
</ScrollView>
