<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.AddStationActivity" android:id="@+id/constraintlayout">

        <TextView
                android:text="@string/createstation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="20dp"
                android:textSize="20sp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:maxLength="25"
                android:id="@+id/addcity"
                app:layout_constraintStart_toStartOf="@+id/addstationname"
                android:hint="@string/city"
                android:importantForAutofill="no" tools:targetApi="o"
                app:layout_constraintTop_toBottomOf="@+id/addstationname"
                android:layout_marginTop="25dp" app:layout_constraintEnd_toEndOf="@+id/addstationname"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:maxLength="25"
                android:id="@+id/addstreet"
                app:layout_constraintTop_toBottomOf="@+id/addcity"
                app:layout_constraintStart_toStartOf="@+id/addcity" android:layout_marginTop="15dp"
                android:hint="@string/street" android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:maxLength="6"
                android:gravity="center"
                android:id="@+id/flatnumber"
                app:layout_constraintStart_toEndOf="@+id/addstreet"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/addcity"
                android:hint="@string/buldingnumber" android:importantForAutofill="no"
                tools:targetApi="o" android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/addstreet"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:maxLength="18"
                android:id="@+id/addstationname"
                app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="35dp"
                android:layout_marginStart="25dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="25dp" app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/stationname" android:importantForAutofill="no" tools:targetApi="o"/>
        <TextView
                android:text="@string/windunit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="1"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/addstreet" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/addstreet" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/flatnumber" android:textSize="18sp"/>
        <RadioGroup
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:checkedButton="@id/kmh"
                app:layout_constraintStart_toStartOf="@+id/addstreet"
                android:id="@+id/tempunit" app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_marginTop="5dp" app:layout_constraintEnd_toEndOf="@+id/flatnumber"
                android:layout_marginEnd="8dp">
            <RadioButton
                    android:text="@string/kmh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/kmh" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/ms"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_height="wrap_content" android:id="@+id/ms" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/mph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/mph" android:layout_weight="1"/>
        </RadioGroup>
        <TextView
                android:text="@string/tempunit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/tempunit" app:layout_constraintStart_toStartOf="@+id/addstreet"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/flatnumber"
                android:layout_marginEnd="8dp" android:layout_marginTop="10dp" android:textSize="18sp"/>
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@id/C"
                app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="@+id/addstreet"
                app:layout_constraintEnd_toEndOf="@+id/flatnumber" android:layout_marginEnd="8dp"
                android:layout_marginTop="5dp" android:id="@+id/windunit">
            <RadioButton
                    android:text="@string/Celsjusz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/C" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/Fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_height="wrap_content" android:id="@+id/F" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/Kelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/K" android:layout_weight="1"/>
        </RadioGroup>

        <Switch
                android:id="@+id/ecowitt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/ecowitt"
                android:switchPadding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/windunit" />

        <Button
                android:id="@+id/addbutton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:text="@string/addstation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ecowitt" />

        <ProgressBar
                android:id="@+id/progressaddStation"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                android:indeterminateOnly="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ecowitt"
                tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
