<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <TextView
            android:text="@string/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp" app:layout_constraintEnd_toStartOf="@+id/searchtext" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"/>
    <TextView
            android:text="@string/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/country" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="11sp" app:layout_constraintStart_toEndOf="@+id/city"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/flag"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/numberstation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchtext" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/country"
            android:textSize="11sp" android:layout_marginEnd="2dp"
            app:layout_constraintEnd_toStartOf="@+id/numberstation"/>
    <TextView
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberstation"
            app:layout_constraintTop_toTopOf="@+id/searchtext"
            app:layout_constraintBottom_toBottomOf="@+id/searchtext" android:textSize="11sp"
            app:layout_constraintEnd_toStartOf="@+id/showstations" android:layout_marginEnd="8dp"/>
    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/city"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:id="@+id/showstations"
            android:contentDescription="@string/downarrow"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/searchtext" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/country"/>
    <ImageView
            android:layout_width="24dp"
            android:layout_height="16.5dp" app:srcCompat="@drawable/cloud"
            android:id="@+id/flag"
            android:contentDescription="@string/flag"
            app:layout_constraintBottom_toTopOf="@+id/searchtext"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" android:layout_marginTop="2dp"
            app:layout_constraintEnd_toStartOf="@+id/showstations" android:layout_marginEnd="30dp"
    />
    <TextView
            android:text="@string/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/street"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/city" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="12sp" tools:visibility="gone"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            android:id="@+id/citystations" tools:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/street"/>
</android.support.constraint.ConstraintLayout>