<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RegisterActivity">

    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="24sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/login"
            android:drawableEnd="@drawable/ic_person_black_24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/regusername"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:drawableEnd="@drawable/ic_mail_outline_black_24dp"
            android:id="@+id/email"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@+id/login" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp" android:layout_marginTop="18dp" android:hint="@string/email"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:drawableEnd="@drawable/ic_vpn_key_black_24dp"
            android:id="@+id/pass"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/email" android:layout_marginTop="18dp"
            android:hint="@string/password" android:importantForAutofill="no" tools:targetApi="o"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/error"
            android:id="@+id/regerror" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp" android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/pass"/>
    <Button
            android:text="@string/createacc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/register" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/regerror" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="70dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" style="@style/Widget.AppCompat.Button.Colored"/>
</android.support.constraint.ConstraintLayout>